--- a/02/index.htm
+++ b/02/index.htm
@@ -3,22 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React</title>
+    <title>Core React</title>
   </head>
   <body>
-    <div id="root">
-      <h1>Hello World!</h1>
-      <h1>Hello World!</h1>
-      <h1>Hello World!</h1>
-    </div>
-    <script
+    <div id="root"></div>
+    <!-- <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
     ></script>
     <script
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
+    ></script> -->
     <link rel="stylesheet" href="./index.css" />
     <!-- <script>
       const heading = document.createElement("h1");
@@ -29,6 +25,6 @@
       root.appendChild(heading);
 
     </script> -->
-    <script src="./App.js"></script>
+    <script type="module" src="./App.js"></script>
   </body>
 </html>
